<resources>
    <string name="app_name">ScAsk</string>
    <string name="action_settings">Settings</string>
    <string name="addQuestion_question">Question</string>
    <string name="addQuestion_title">Add question</string>
    <string name="addQuestion_t1">YES or NO</string>
    <string name="addQuestion_t2">Integer</string>
    <string name="addQuestion_t3">String</string>
    <string name="addQuestion_answer">Correct answer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="title_activity_question">Answer the question</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2743559009390249/9964497810</string>
    <string name="action_export_all">Export all files</string>
    <string name="settings_questions">Questions</string>
    <string name="settings_resetAnswers">Reset responses</string>
    <string name="done">Done</string>
    <string name="mainActivity_decided">Decided</string>
    <string name="mainActivity_decided_of">of</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries" translatable="false">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="downloadActivity_title">Please, wait</string>
    <string name="downloadActivity_downloading">Downloading…</string>
    <string name="settings_syncNow">Sync now</string>
    <string name="sync_server">http://sccraft.ru/android-app/scask/questions_en</string>
    <string name="settings_sync_server">Server</string>
    <string name="pleaseWait">Please, wait…</string>
    <string name="removeAllDialogTitle">Remove all Questions?</string>
    <string name="removeAllDialogContent">This action is irreversible!</string>
    <string name="settings_removeAll">Remove all questions</string>
    <string name="action_done">End</string>
    <string name="done_right">"Correct: "</string>
    <string name="done_incorrect">"Incorrect: "</string>
    <string name="done_escape">Escape:</string>
    <string name="done_title">Statistic</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_showQuestionsNumber">Show question numbers</string>
    <string name="action_export">Export question</string>
    <string name="action_share">Share</string>
    <string name="buy">Buy</string>
    <string name="getItFree">Get it free!</string>
    <string name="close">Close</string>
    <string name="adsDisabled">ADs is disabled!</string>
    <string name="unavableInThisMoment">This action is not avaible now!\\nPress \"Bask\" and try again/</string>
    <string name="disableADs">Disable ADs</string>
    <string name="notBuyed">This product is not purchased</string>
    <string name="ads">ADs</string>
    <string name="error">Error</string>
    <string name="noQuestions">No saved questions!</string>
    <string name="mainActivity_dialogMessage">Do you want to download a standard set of questions?</string>
    <string-array name="noQuestions">
        <item>No questions</item>
    </string-array>
    <string name="version">"Version: "</string>
    <string name="versionCode">Build #</string>
    <string name="rateApp">Rate this APP</string>
    <string name="goToGooglePlayQestion">Go to GooglePlay store?</string>
    <string name="about">About</string>
    <string name="license">"License: "</string>
    <string name="viewLicense">View license</string>
    <string name="sourceCode">View source code</string>
    <string name="action_help">Help</string>
    <string name="help_defaultServer">What is the default server?</string>
    <string name="help_removeQuestion">How to remove question?</string>
    <string name="help_removeQuestion_answer">To delete one question - make a long press on it in the list of questions.</string>
    <string name="intendificatorReqest">Please provide access to your advertising ID</string>
    <string name="intendificatorMessage">This app is free, but it contains ads.\nDue to the fact that AdMob by default uses an advertising intensifier, and Google Play requires the user\'s consent to use the advertising intensifier, you need either to allow access to the intensifier, or to refuse to use this application.\n\nPrivacy policy is available in the About window.</string>
    <string name="privacy">Privacy policy</string>
    <string name="settings_edit_mode">Edit mode</string>
</resources>
