<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_questions">

        <Preference android:title="@string/settings_resetAnswers">
            <intent android:action="ru.sccraft.scask.reset"/>
        </Preference>

        <Preference
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/settings_removeAll">
            <intent android:action="ru.sccraft.scask.removeall" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_appearance">
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_showQuestionsNumber"
            android:title="@string/settings_showQuestionsNumber" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ads">
        <Preference
            android:title="@string/disableADs">
            <intent android:action="ru.sccraft.scask.disableads"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
