<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.sccraft.scask.MainActivity">
    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_check_white_36dp"
        android:orderInCategory="100"
        android:title="@string/action_done"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="101"
        android:title="@string/action_export_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
