<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.sccraft.scask.AddQuestionActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/addQuestion_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addQuestion_question" />

            <RadioGroup
                android:id="@+id/addQuestion_tList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/addQuestion_t1">

                <RadioButton
                    android:id="@+id/addQuestion_t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addQuestion_t1" />

                <RadioButton
                    android:id="@+id/addQuestion_t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addQuestion_t2" />

                <RadioButton
                    android:id="@+id/addQuestion_t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addQuestion_t3" />

            </RadioGroup>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/addQuestin_boolAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />

            <EditText
                android:id="@+id/addQuestion_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addQuestion_answer"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
